Fixed layout issue for IE

--- a/src/WebComponents/Checkbox/checkbox.scss
+++ b/src/WebComponents/Checkbox/checkbox.scss
@@ -11,7 +11,6 @@
 
     div {
         > span {
-            @include flex();
             padding-left: 2px;
             overflow: hidden;
             text-overflow: ellipsis;
